fix overflow

--- a/react-ui/src/index.css
+++ b/react-ui/src/index.css
@@ -4,6 +4,7 @@ html, body {
   left: 0;
   margin: 0;
   height: 100%;
+  overflow-y: scroll;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
